# huggingface-datasets_wrime

./: .gitignore  README.md  pyproject.toml  wrime.py
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: wrime_test.py
